force-app/main/default/objects/iContactforSF__iContact_Sent_Message__c.object
<CustomObject>
    <customHelpPage>iContactforSF__iContactHelp</customHelpPage>
    <description>A record of a message that was sent via iContact. Used for tracking statistics.</description>
    <fields>
        <fullName>iContactforSF__Body_HTML__c</fullName>
        <description>The HTML body of the email template that was sent to iContact.</description>
        <inlineHelpText>The HTML body of the email template that was sent to iContact.</inlineHelpText>
        <label>Body HTML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Body_Text__c</fullName>
        <description>The text body of the email template that was sent to iContact.</description>
        <inlineHelpText>The text body of the email template that was sent to iContact.</inlineHelpText>
        <label>Body Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first warning threshold for bounce rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for bounce rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.03</defaultValue>
        <description>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for bounce rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Bounce Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounce_Rate__c</fullName>
        <description>Bounces divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Bounces__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bounce rate is the ratio of the number of bounces per recipients.</inlineHelpText>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Bounces__c</fullName>
        <description>Number of message bounces as reported from iContact.</description>
        <inlineHelpText>Bounces reports the number of times the message was not successfully delivered to an email address, which is usually due to a full email inbox, a down email server, or an invalid email address.</inlineHelpText>
        <label>Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Campaign_Member_Count__c</fullName>
        <description>The total number of campaign members the campaign had when this message was sent.</description>
        <inlineHelpText>The total number of campaign members the campaign had when this message was sent.</inlineHelpText>
        <label>Campaign Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Campaign__c</fullName>
        <description>The SFDC campaign this message was sent from.</description>
        <inlineHelpText>The SFDC campaign this message was sent from.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>iContact Sent Messages</relationshipLabel>
        <relationshipName>iContact_Sent_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for click rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.08</defaultValue>
        <description>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for click rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Click Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Click_Rate__c</fullName>
        <description>Unique clicks divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Unique_Clicks__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The click rate is the ratio of individual clicks per recipients, which indicates the activity rate of your recipients. A high click rate (~8% or more) means people are frequently viewing and interacting with your message.</inlineHelpText>
        <label>Click Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Clicks__c</fullName>
        <description>Number of message clicks as reported from iContact.</description>
        <inlineHelpText>Total clicks reports the total number of times that anyone has clicked on a link in your message. For instance, if 5 people click on one link and one more person clicks on 5 links, the total clicks would be 10.</inlineHelpText>
        <label>Total Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Comments__c</fullName>
        <description>Number of message comments as reported from iContact.</description>
        <inlineHelpText>Number of message comments as reported from iContact.</inlineHelpText>
        <label>Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Complaint_Rate__c</fullName>
        <description>Complaints divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Complaints__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The complaint rate is the ratio of the number of people who reported your message as spam per number of recipients.</inlineHelpText>
        <label>Complaint Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Complaints__c</fullName>
        <description>Number of message complaints as reported from iContact.</description>
        <inlineHelpText>The number of complaints refers to the number of people who reported your message as spam in their email client.</inlineHelpText>
        <label>Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Delivered__c</fullName>
        <description>Number of message deliveries as reported from iContact.</description>
        <inlineHelpText>This is the number of emails that successfully reached recipients&apos; email inboxes. This can be less than the number of attempted sends due to bounced emails or unsubscribed contacts.</inlineHelpText>
        <label>Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Email_Template_ID__c</fullName>
        <description>The Id of the template that was used for the iContact Send.</description>
        <label>Email Template ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Forward_Rate__c</fullName>
        <description>Forwards divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Forwards__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The forward rate is the ratio of forwards per number of recipients.</inlineHelpText>
        <label>Forward Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Forwards__c</fullName>
        <description>Number of message forwards as reported from iContact.</description>
        <inlineHelpText>This is the number of times the &quot;Forward to a friend&quot; link was clicked in the iContact message you sent.</inlineHelpText>
        <label>Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__IdString__c</fullName>
        <description>Hidden field, used for pagination</description>
        <formula>Id&amp;if(mid(Id,10,1)=upper(mid(Id,10,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,11,1)=upper(mid(Id,11,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,12,1)=upper(mid(Id,12,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,13,1)=upper(mid(Id,13,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,14,1)=upper(mid(Id,14,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,15,1)=upper(mid(Id,15,1)), &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field, used for pagination</inlineHelpText>
        <label>IdString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Last_Update_Statistics_Date__c</fullName>
        <description>Deprecated field that has no use
The date/time of the most recent statistics update for this message.</description>
        <formula>LastModifiedDate</formula>
        <inlineHelpText>The date/time of the most recent statistics update for this message.</inlineHelpText>
        <label>Deprecated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_1__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for open rate, where red becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate_Success_Threshold_2__c</fullName>
        <defaultValue>0.10</defaultValue>
        <description>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</description>
        <inlineHelpText>The second success threshold for open rate, where yellow becomes green on the dashboard gauge.</inlineHelpText>
        <label>Open Rate Success %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Open_Rate__c</fullName>
        <description>Unique opens divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Unique_Opens__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The open rate is the ratio of individual opens per recipients, which indicates the percentage of people who are viewing your message.</inlineHelpText>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Opens__c</fullName>
        <description>Total number of message opens as reported from iContact.</description>
        <inlineHelpText>Total opens reports the total number of times that any recipient has opened your message. For instance, if 5 people open the message once and one more person opens the message 5 times, the total opens would be 10.</inlineHelpText>
        <label>Total Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Released_Time__c</fullName>
        <description>The time the send request was completed.</description>
        <inlineHelpText>The time the send request was completed.</inlineHelpText>
        <label>Released Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Released__c</fullName>
        <description>Number of deliveries + bounces as reported from iContact.</description>
        <formula>iContactforSF__Delivered__c +  iContactforSF__Bounces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the number of messages that iContact attempted to send.</inlineHelpText>
        <label>Released</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Scheduled_Time__c</fullName>
        <description>The time the send request was started for processing.</description>
        <inlineHelpText>The time the send request was started for processing.</inlineHelpText>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Sent_to__c</fullName>
        <description>Displays whether this message was sent to all campaign members, or was targeted using the &quot;Targeted Send&quot; option.</description>
        <inlineHelpText>Displays whether this message was sent to all campaign members, or was targeted using the &quot;Targeted Send&quot; option.</inlineHelpText>
        <label>Sent to</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Spam_Check_Details__c</fullName>
        <label>Spam Check Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Spam_Check_Score__c</fullName>
        <label>Spam Check Score</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__StatisticsStatus__c</fullName>
        <description>Indicator for status of the statistic updates for this message.</description>
        <inlineHelpText>Indicator for status of the statistic updates for this message.</inlineHelpText>
        <label>Update Statistics Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not In Progress</fullName>
                    <default>true</default>
                    <label>Not In Progress</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iContactforSF__StatusSummary__c</fullName>
        <description>This is an optional summary giving more information about the current status</description>
        <label>StatusSummary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Status__c</fullName>
        <description>The status of the message being sent.</description>
        <inlineHelpText>The status of the message being sent.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date1__c</fullName>
        <description>Date used for targeted send process.</description>
        <label>Targeted Join Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Join_Date2__c</fullName>
        <description>Date used during targeted send process.</description>
        <label>Targeted Join Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this was a targeted send, contains a link to the message that the targets were based on.</description>
        <inlineHelpText>If this was a targeted send, contains a link to the message that the targets were based on.</inlineHelpText>
        <label>Targeted Message</label>
        <referenceTo>iContactforSF__iContact_Sent_Message__c</referenceTo>
        <relationshipLabel>Targeted Sent Messages</relationshipLabel>
        <relationshipName>iContact_Sent_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this message was sent using the &quot;Targeted Send&quot; feature.</description>
        <inlineHelpText>If checked, this message was sent using the &quot;Targeted Send&quot; feature.</inlineHelpText>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unique_Clicks__c</fullName>
        <description>Total number of unique clicks as reported from iContact.</description>
        <inlineHelpText>Unique clicks reports the number of recipients that clicked on your message.</inlineHelpText>
        <label>Unique Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unique_Opens__c</fullName>
        <description>Total number of unique opens as reported from iContact.</description>
        <inlineHelpText>Unique opens reports the number of recipients that opened your message.</inlineHelpText>
        <label>Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_1__c</fullName>
        <defaultValue>0.001</defaultValue>
        <description>The first warning threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</description>
        <inlineHelpText>The first success threshold for unsubscribe rate, where green becomes yellow on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Caution %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate_Warning_Threshold_2__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</description>
        <inlineHelpText>The second warning threshold for unsubscribe rate, where yellow becomes red on the dashboard gauge.</inlineHelpText>
        <label>Unsubscribe Rate Warning %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribe_Rate__c</fullName>
        <description>Unsubscribes divided by released.</description>
        <formula>if(iContactforSF__Released__c &gt; 0, iContactforSF__Unsubscribed__c / iContactforSF__Released__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The unsubscribe rate is the ratio of the number of unsubscribed campaign members per recipients sent the message.</inlineHelpText>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Unsubscribed__c</fullName>
        <description>Number of message unsubscribes as reported from iContact.</description>
        <inlineHelpText>Unsubscribes reports the number of contacts who unsubscribed from a particular message.</inlineHelpText>
        <label>Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Lite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Asynchronous_Send_Id__c</fullName>
        <label>iContact Asynchronous Send Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Campaign_ID__c</fullName>
        <description>The ID of the iContact campaign that this message was sent for.</description>
        <inlineHelpText>The ID of the iContact campaign that this message was sent for.</inlineHelpText>
        <label>iContact Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Message_ID__c</fullName>
        <description>The ID of the iContact Message that was created and sent out.</description>
        <inlineHelpText>The ID of the iContact Message that was created and sent out.</inlineHelpText>
        <label>iContact Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Send_ID__c</fullName>
        <description>The ID of the iContact Send that was created.</description>
        <inlineHelpText>The ID of the iContact Send that was created.</inlineHelpText>
        <label>iContact Send ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__update_statistics_date__c</fullName>
        <description>Most recent time that updating statistics finished for this message.</description>
        <inlineHelpText>Most recent time that updating statistics finished for this message.</inlineHelpText>
        <label>Last Update Statistics Time</label>
        <type>DateTime</type>
    </fields>
    <label>iContact Sent Message</label>
    <listViews>
        <fullName>iContactforSF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Sent Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>iContactforSF__CannotModifyStatusOrVersion</fullName>
        <active>false</active>
        <description>User cannot modify the status or version of the sent message.</description>
        <errorConditionFormula>OR (ISCHANGED(iContactforSF__Status__c), ISCHANGED( iContactforSF__Version__c))</errorConditionFormula>
        <errorMessage>You cannot modify the status or version of a sent message.</errorMessage>
    </validationRules>
</CustomObject>